--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.6.0
+  video_player: ^2.5.3
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/videos/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -76,18 +78,24 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Poppins-Bold
+    - family: Montserrat_Semibold
       fonts:
-        - asset: assets/fonts/Poppins-Bold.ttf
-    - family: Poppins-Regular
+        - asset: assets/fonts/Montserrat-SemiBold.otf
+    - family: Montserrat-Regular
       fonts:
-        - asset: assets/fonts/Poppins-Regular.ttf
-    - family: Poppins-SemiBold
+        - asset: assets/fonts/Montserrat-Regular.otf
+    - family: Montserrat-ExtraBold
       fonts:
-        - asset: assets/fonts/Poppins-SemiBold.ttf
-    - family: Poppins-Medium
+        - asset: assets/fonts/Montserrat-ExtraBold.otf
+    - family: Montserrat-Medium
       fonts:
-        - asset: assets/fonts/Poppins-Medium.ttf
+        - asset: assets/fonts/Montserrat-Medium.otf
+    - family: Montserrat-Bold
+      fonts:
+        - asset: assets/fonts/Montserrat-Bold.otf
+    - family: Montserrat-Light
+      fonts:
+        - asset: assets/fonts/Montserrat-Light.otf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
